// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextArea All Labels 1`] = `
Array [
  <label
    className="psds-text-area"
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      Some label
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
          disabled={false}
          placeholder="Some placeholder"
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-text-area__sub-label psds-theme--dark"
    >
      Some sub label
    </div>
  </label>,
  <label
    className="psds-text-area"
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      Some label
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-subtle psds-theme--dark"
          disabled={false}
          placeholder="Some placeholder"
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-text-area__sub-label psds-theme--dark"
    >
      Some sub label
    </div>
  </label>,
]
`;

exports[`Storyshots Components/TextArea Disabled Compare 1`] = `
Array [
  <label
    className="psds-text-area"
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      Normal
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
          disabled={false}
          placeholder="I'm normal, see"
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-text-area__sub-label psds-theme--dark"
    >
      Still normal
    </div>
  </label>,
  <label
    className="psds-text-area psds-text-area--disabled"
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      I'm not usable
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
          disabled={true}
          placeholder="I'm untouchable"
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-text-area__sub-label psds-theme--dark"
    >
      Neither am I
    </div>
  </label>,
]
`;

exports[`Storyshots Components/TextArea Error Compare 1`] = `
Array [
  <label
    className="psds-text-area"
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      Normal
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
          disabled={false}
          placeholder="I'm normal, see"
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-text-area__sub-label psds-theme--dark"
    >
      Still normal
    </div>
  </label>,
  <label
    className="psds-text-area"
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      I'm in an error state
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark psds-text-area__field--error"
          disabled={false}
          style={
            Object {
              "height": 112,
            }
          }
          value="Wow, here is all the content wrapped up inside.Wow, here is all the content wrapped up inside.Wow, here is all the content wrapped up inside.   "
        />
      </div>
      <div
        className="psds-text-area__error"
      >
        <div
          className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-area__sub-label psds-theme--dark"
    >
      Here
    </div>
  </label>,
]
`;

exports[`Storyshots Components/TextArea Focus 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Full Width Layout 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
      "width": "800px",
    }
  }
>
  <label
    className="psds-text-area"
    style={
      Object {
        "display": "block",
        "width": "100%",
      }
    }
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      max-width still applies
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
          disabled={false}
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
    </div>
  </label>
  <label
    className="psds-text-area"
    style={
      Object {
        "display": "block",
        "maxWidth": "none",
        "width": "100%",
      }
    }
  >
    <div
      className="psds-text-area__label psds-theme--dark"
    >
      remove max-width
    </div>
    <div
      className="psds-text-area__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <textarea
          className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark psds-text-area__field--error"
          disabled={false}
          style={
            Object {
              "height": 112,
            }
          }
        />
      </div>
      <div
        className="psds-text-area__error"
      >
        <div
          className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextArea Label 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__label psds-theme--dark"
  >
    Some label
  </div>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Label And Sub Label 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__label psds-theme--dark"
  >
    Some label
  </div>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
  <div
    className="psds-text-area__sub-label psds-theme--dark"
  >
    Some sublabel
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Less Than Four Rows 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__label psds-theme--dark"
  >
    Min height engages
  </div>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 40,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea More Than Four Rows 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__label psds-theme--dark"
  >
    6 rows of text
  </div>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 160,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea No Label 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Placeholder 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        placeholder="some placeholder"
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Prop Name 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        name="myFieldNameOfPower"
        placeholder="I have a form name"
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Prop On Change 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Focus on me!"
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextArea Sub Label 1`] = `
<label
  className="psds-text-area"
>
  <div
    className="psds-text-area__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <textarea
        className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
        disabled={false}
        style={
          Object {
            "height": 112,
          }
        }
      />
    </div>
  </div>
  <div
    className="psds-text-area__sub-label psds-theme--dark"
  >
    Some sublabel
  </div>
</label>
`;
